fixed overlap mobile menu with z-index on mobile-nav class instead give negative z-index for carousel

--- a/src/scss/sections/_header.scss
+++ b/src/scss/sections/_header.scss
@@ -1,8 +1,5 @@
 .offcanvas-active {
   overflow: hidden;
-  .carousel {
-    z-index: -1;
-  }
 }
 
 .main-header {
@@ -105,6 +102,7 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
   visibility: hidden;
+  z-index: $zindex-sticky;
 
   //overlay close icon
   &:before {
